--- a/indi_allsky/flask/templates/generate.html
+++ b/indi_allsky/flask/templates/generate.html
@@ -235,6 +235,7 @@ $( document ).ready(function() {
 
     new DataTable('#tasks-table', {
         searching: true,
+        order: [[1, 'desc']],
         layout: {
             topEnd: ['buttons', 'search'],
         },
