--- a/indi_allsky/flask/templates/users.html
+++ b/indi_allsky/flask/templates/users.html
@@ -46,6 +46,7 @@ var camera_id = {{ camera_id }};
 function init() {
     new DataTable('#users-table', {
         searching: true,
+        order: [[0, 'desc']],
         lengthMenu: [20, 50, 100, -1],
         layout: {
             topEnd: ['buttons', 'search'],
