--- a/indi_allsky/flask/templates/adu.html
+++ b/indi_allsky/flask/templates/adu.html
@@ -56,6 +56,7 @@ var camera_id = {{ camera_id }};
 function init() {
     new DataTable('#adu-table', {
         searching: true,
+        order: [[0, 'desc']],
         lengthMenu: [20, 50, 100, -1],
         layout: {
             topEnd: ['buttons', 'search'],
