--- a/indi_allsky/flask/templates/network.html
+++ b/indi_allsky/flask/templates/network.html
@@ -142,6 +142,15 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <hr>
+
+    <div class="row">
+        <div class="col-sm-6">
+            <div><span class="badge rounded-pill bg-info text-dark">Info</span> Powersave is disabled by default on new WiFi connections</div>
+        </div>
+    </div>
+
+
 </div><!-- end wificonnect tab -->
 <div class="tab-pane fade" id="nav-hotspot" role="tabpanel" aria-labelledby="nav-hotspot-tab">
 
