dark mode tables

--- a/indi_allsky/flask/templates/adu.html
+++ b/indi_allsky/flask/templates/adu.html
@@ -23,7 +23,7 @@ var camera_id = {{ camera_id }};
 
 <div class="row" style="display:block;">
   <div class="col-sm-12">
-    <table id="adu-table" class="table table-striped compact">
+    <table id="adu-table" class="table table-striped compact" data-bs-theme="dark">
       <thead>
         <tr>
           <th>Date</th>
