--- a/indi_allsky/flask/templates/darks.html
+++ b/indi_allsky/flask/templates/darks.html
@@ -23,7 +23,7 @@ var camera_id = {{ camera_id }};
 
 {% block content %}
 <h3>Dark Frames</h3>
-<table id="darks-table" class="table table-striped compact">
+<table id="darks-table" class="table table-striped compact" data-bs-theme="dark">
   <thead>
     <th>ID</th>
     <th>Date</th>
@@ -67,7 +67,7 @@ var camera_id = {{ camera_id }};
 <hr>
 
 <h3>Bad Pixel Maps</h3>
-<table id="bpm-table" class="table table-striped compact">
+<table id="bpm-table" class="table table-striped compact" data-bs-theme="dark">
   <thead>
     <th>ID</th>
     <th>Date</th>
