--- a/indi_allsky/flask/templates/generate.html
+++ b/indi_allsky/flask/templates/generate.html
@@ -87,7 +87,7 @@ var camera_id = {{ camera_id }};
 <hr>
 
 Tasks
-<table id="tasks-table" class="table table-striped compact">
+<table id="tasks-table" class="table table-striped compact" data-bs-theme="dark">
   <thead>
     <th>ID</th>
     <th>Date</th>
