--- a/indi_allsky/flask/templates/taskqueue.html
+++ b/indi_allsky/flask/templates/taskqueue.html
@@ -16,7 +16,7 @@ var camera_id = {{ camera_id }};
 {% block content %}
 <div class="container">
 <div class="row">
-  <table id="tasks-table" class="table table-striped compact">
+  <table id="tasks-table" class="table table-striped compact" data-bs-theme="dark">
     <thead>
       <tr>
         <th>ID</th>
