--- a/indi_allsky/flask/templates/config_list.html
+++ b/indi_allsky/flask/templates/config_list.html
@@ -18,7 +18,7 @@ var camera_id = {{ camera_id }};
 
 <div class="row" style="display:block;">
   <div class="col-sm-12">
-<table id="config-table" class="table table-striped compact">
+<table id="config-table" class="table table-striped compact" data-bs-theme="dark">
   <thead>
     <tr>
       <th>ID</th>
