--- a/indi_allsky/flask/templates/lag.html
+++ b/indi_allsky/flask/templates/lag.html
@@ -21,7 +21,7 @@ var camera_id = {{ camera_id }};
 
 <div class="row" style="display:block;">
   <div class="col-sm-12">
-    <table id="lag-table" class="table table-striped compact">
+    <table id="lag-table" class="table table-striped compact" data-bs-theme="dark">
       <thead>
         <tr>
           <th>Date</th>
