powersave enable/disable

--- a/indi_allsky/flask/templates/network.html
+++ b/indi_allsky/flask/templates/network.html
@@ -60,6 +60,9 @@ var camera_id = {{ camera_id }};
             <hr>
             <button id="incpriority-button" class="btn btn-primary">+10 priority</button>
             <button id="decpriority-button" class="btn btn-secondary">-10 priority</button>
+            <hr>
+            <button id="powersavedisable-button" class="btn btn-success">Disable<br>Powersave</button>
+            <button id="powersaveenable-button" class="btn btn-warning">Enable<br>Powersave</button>
         </div>
         <div class="col-sm-1">
             <input class="form-check-input" id="CONN_CONFIRM1" name="CONN_CONFIRM1" type="checkbox" value="y"> Confirm
@@ -648,6 +651,126 @@ $('#decpriority-button').on('click', function() {
             $("#decpriority-button").attr("class", "btn btn-danger");
             $("#decpriority-button").html(
               '-10 priority'
+            );
+
+            var errors = JSON.parse(rdata.responseText);
+
+            $('#failure-message').html(errors['failure-message']);
+            $('#failure-message').css({'display' : 'block'});
+        },
+    });
+});
+
+
+$('#powersavedisable-button').on('click', function() {
+    $('#success-message').css({'display' : 'none'});
+    $('#failure-message').css({'display' : 'none'});
+
+
+    if (! $("#CONN_CONFIRM1").prop('checked')) {
+        console.log('Confirm checkbox not checked');
+        return;
+    }
+    $("#CONN_CONFIRM1").prop('checked', false);
+
+
+    if ( $('#CONNECTIONS_SELECT').val() == "" ){
+        return;
+    }
+
+
+    $("#powersavedisable-button").attr("class", "btn btn-secondary");
+    $("#powersavedisable-button").html(
+      '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">Disable<br>Powersave</span>'
+    );
+
+
+    var json_data = {
+        'COMMAND' : 'powersavedisable',
+        'CONNECTION' : $('#CONNECTIONS_SELECT').val(),
+    };
+
+
+    $.ajax({
+        type: "POST",
+        url: "{{ url_for('indi_allsky.ajax_network_manager_view') }}",
+        contentType: "application/json",
+        data: JSON.stringify(json_data),
+        success: function(rdata){
+            $("#powersavedisable-button").html(
+              'Disable<br>Powersave'
+            );
+
+            $('#success-message').html(rdata['success-message']);
+            $('#success-message').css({'display' : 'block'});
+            setTimeout(function() {
+                $('#success-message').css({'display' : 'none'});
+            }, 15000);
+        },
+        error: function(rdata){
+            $("#powersavedisable-button").attr("class", "btn btn-danger");
+            $("#powersavedisable-button").html(
+              'Disable<br>Powersave'
+            );
+
+            var errors = JSON.parse(rdata.responseText);
+
+            $('#failure-message').html(errors['failure-message']);
+            $('#failure-message').css({'display' : 'block'});
+        },
+    });
+});
+
+
+$('#powersaveenable-button').on('click', function() {
+    $('#success-message').css({'display' : 'none'});
+    $('#failure-message').css({'display' : 'none'});
+
+
+    if (! $("#CONN_CONFIRM1").prop('checked')) {
+        console.log('Confirm checkbox not checked');
+        return;
+    }
+    $("#CONN_CONFIRM1").prop('checked', false);
+
+
+    if ( $('#CONNECTIONS_SELECT').val() == "" ){
+        return;
+    }
+
+
+    $("#powersaveenable-button").attr("class", "btn btn-secondary");
+    $("#powersaveenable-button").html(
+      '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">Enable<br>Powersave</span>'
+    );
+
+
+    var json_data = {
+        'COMMAND' : 'powersaveenable',
+        'CONNECTION' : $('#CONNECTIONS_SELECT').val(),
+    };
+
+
+    $.ajax({
+        type: "POST",
+        url: "{{ url_for('indi_allsky.ajax_network_manager_view') }}",
+        contentType: "application/json",
+        data: JSON.stringify(json_data),
+        success: function(rdata){
+            $("#powersaveenable-button").html(
+              'Enable<br>Powersave'
+            );
+
+            $('#success-message').html(rdata['success-message']);
+            $('#success-message').css({'display' : 'block'});
+            setTimeout(function() {
+                $('#success-message').css({'display' : 'none'});
+            }, 15000);
+        },
+        error: function(rdata){
+            $("#powersaveenable-button").attr("class", "btn btn-danger");
+            $("#powersaveenable-button").html(
+              'Enable<br>Powersave'
             );
 
             var errors = JSON.parse(rdata.responseText);
