--- a/indi_allsky/flask/templates/network.html
+++ b/indi_allsky/flask/templates/network.html
@@ -679,7 +679,7 @@ $('#powersavedisable-button').on('click', function() {
     }
 
 
-    $("#powersavedisable-button").attr("class", "btn btn-secondary");
+    $("#powersavedisable-button").attr("class", "btn btn-success");
     $("#powersavedisable-button").html(
       '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">Disable<br>Powersave</span>'
     );
@@ -739,7 +739,7 @@ $('#powersaveenable-button').on('click', function() {
     }
 
 
-    $("#powersaveenable-button").attr("class", "btn btn-secondary");
+    $("#powersaveenable-button").attr("class", "btn btn-warning");
     $("#powersaveenable-button").html(
       '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">Enable<br>Powersave</span>'
     );
