--- a/indi_allsky/flask/templates/network.html
+++ b/indi_allsky/flask/templates/network.html
@@ -55,8 +55,8 @@ var camera_id = {{ camera_id }};
             <button id="deactivate-button" class="btn btn-warning">Deactivate</button>
             <button id="delete-button" class="btn btn-dark text-danger">Delete</button>
             <hr>
-            <button id="autostart-button" class="btn btn-info">Enable auto-start</button>
-            <button id="no-autostart-button" class="btn btn-secondary">Disable auto-start</button>
+            <button id="autostart-button" class="btn btn-info">Enable<br>Auto-start</button>
+            <button id="no-autostart-button" class="btn btn-secondary">Disable<br>Auto-start</button>
             <hr>
             <button id="incpriority-button" class="btn btn-primary">+10 priority</button>
             <button id="decpriority-button" class="btn btn-secondary">-10 priority</button>
@@ -441,7 +441,7 @@ $('#autostart-button').on('click', function() {
 
     $("#autostart-button").attr("class", "btn btn-info");
     $("#autostart-button").html(
-      '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">Enable auto-start</span>'
+      '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">Enable<br>Auto-start</span>'
     );
 
 
@@ -458,7 +458,7 @@ $('#autostart-button').on('click', function() {
         data: JSON.stringify(json_data),
         success: function(rdata){
             $("#autostart-button").html(
-              'Enable auto-start'
+              'Enable<br>Auto-start'
             );
 
             $('#success-message').html(rdata['success-message']);
@@ -470,7 +470,7 @@ $('#autostart-button').on('click', function() {
         error: function(rdata){
             $("#autostart-button").attr("class", "btn btn-danger");
             $("#autostart-button").html(
-              'Enable auto-start'
+              'Enable<br>Auto-start'
             );
 
             var errors = JSON.parse(rdata.responseText);
@@ -501,7 +501,7 @@ $('#no-autostart-button').on('click', function() {
 
     $("#no-autostart-button").attr("class", "btn btn-secondary");
     $("#no-autostart-button").html(
-      '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">Disable auto-start</span>'
+      '<span class="spinner-border spinner-border-sm" aria-hidden="true"></span><span role="status">Disable<br>Auto-start</span>'
     );
 
 
@@ -518,7 +518,7 @@ $('#no-autostart-button').on('click', function() {
         data: JSON.stringify(json_data),
         success: function(rdata){
             $("#no-autostart-button").html(
-              'Disable auto-start'
+              'Disable<br>Auto-start'
             );
 
             $('#success-message').html(rdata['success-message']);
@@ -530,7 +530,7 @@ $('#no-autostart-button').on('click', function() {
         error: function(rdata){
             $("#no-autostart-button").attr("class", "btn btn-danger");
             $("#no-autostart-button").html(
-              'Disable auto-start'
+              'Disable<br>Auto-start'
             );
 
             var errors = JSON.parse(rdata.responseText);
@@ -590,7 +590,7 @@ $('#incpriority-button').on('click', function() {
         error: function(rdata){
             $("#incpriority-button").attr("class", "btn btn-danger");
             $("#incpriority-button").html(
-              'Enable auto-start'
+              'Enable<br>Auto-start'
             );
 
             var errors = JSON.parse(rdata.responseText);
