--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -7391,11 +7391,11 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.MANUAL_GPIO__CLASSNAME.label(class='col-form-label') }}
+            {{ form_config.MANUAL_GPIO__A_CLASSNAME.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
-            {{ form_config.MANUAL_GPIO__CLASSNAME(class='form-select bg-secondary') }}
-            <div id="MANUAL_GPIO__CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            {{ form_config.MANUAL_GPIO__A_CLASSNAME(class='form-select bg-secondary') }}
+            <div id="MANUAL_GPIO__A_CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
             <div></div>
@@ -7417,11 +7417,11 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.MANUAL_GPIO__B_PIN_1.label(class='col-form-label') }}
+            {{ form_config.MANUAL_GPIO__A_PIN_2.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.MANUAL_GPIO__B_PIN_1(class='form-control bg-secondary') }}
-            <div id="MANUAL_GPIO__B_PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            {{ form_config.MANUAL_GPIO__A_PIN_2(class='form-control bg-secondary') }}
+            <div id="MANUAL_GPIO__A_PIN_2-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
             <div>Example: 13</div>
@@ -7430,11 +7430,11 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.MANUAL_GPIO__C_PIN_1.label(class='col-form-label') }}
+            {{ form_config.MANUAL_GPIO__A_PIN_3.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.MANUAL_GPIO__C_PIN_1(class='form-control bg-secondary') }}
-            <div id="MANUAL_GPIO__C_PIN_1-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            {{ form_config.MANUAL_GPIO__A_PIN_3(class='form-control bg-secondary') }}
+            <div id="MANUAL_GPIO__A_PIN_3-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
             <div>Example: 21</div>
@@ -8812,10 +8812,10 @@ const field_names = [
     'GENERIC_GPIO__A_CLASSNAME',
     'GENERIC_GPIO__A_I2C_ADDRESS',
     'GENERIC_GPIO__A_PIN_1',
-    'MANUAL_GPIO__CLASSNAME',
+    'MANUAL_GPIO__A_CLASSNAME',
     'MANUAL_GPIO__A_PIN_1',
-    'MANUAL_GPIO__B_PIN_1',
-    'MANUAL_GPIO__C_PIN_1',
+    'MANUAL_GPIO__A_PIN_2',
+    'MANUAL_GPIO__A_PIN_3',
     'DEVICE__MQTT_TRANSPORT',
     'DEVICE__MQTT_PROTOCOL',
     'DEVICE__MQTT_HOST',
