--- a/indi_allsky/flask/templates/manual_gpio.html
+++ b/indi_allsky/flask/templates/manual_gpio.html
@@ -7,6 +7,8 @@
 <style>
 </style>
 <script type="text/javascript">
+var camera_id = {{ camera_id }};
+var gpio_class = "{{ gpio_class}}";
 var pin_1_state = {{ pin_1_state }};
 var pin_2_state = {{ pin_2_state }};
 var pin_3_state = {{ pin_3_state }};
@@ -16,11 +18,72 @@ var pin_3_state = {{ pin_3_state }};
 {% block content %}
 <div class="container h-100">
 
+<hr>
+
+<div class="form-group row">
+    <div class="col-sm-2">
+      Pin 1
+    </div>
+    <div class="col-sm-2">
+        <button id="pin-1-button" class="btn btn-dark" disabled="disabled">{{ pin_1_name }}</button>
+    </div>
+</div>
+
+<hr>
+
+<div class="form-group row">
+    <div class="col-sm-2">
+      Pin 2
+    </div>
+    <div class="col-sm-2">
+        <button id="pin-2-button" class="btn btn-dark" disabled="disabled">{{ pin_2_name }}</button>
+    </div>
+</div>
+
+<hr>
+
+<div class="form-group row">
+    <div class="col-sm-2">
+      Pin 3
+    </div>
+    <div class="col-sm-2">
+        <button id="pin-3-button" class="btn btn-dark" disabled="disabled">{{ pin_3_name }}</button>
+    </div>
+</div>
+
+
 </div>
 
 <script>
 
 function init() {
+    if (gpio_class) {
+        if (pin_1_state) {
+            $('#pin-1-button').addClass('btn-success');
+        } else {
+            $('#pin-1-button').addClass('btn-danger');
+        }
+
+        if (pin_2_state) {
+            $('#pin-2-button').addClass('btn-success');
+        } else {
+            $('#pin-2-button').addClass('btn-danger');
+        }
+
+        if (pin_3_state) {
+            $('#pin-3-button').addClass('btn-success');
+        } else {
+            $('#pin-3-button').addClass('btn-danger');
+        }
+
+        $('#pin-1-button').removeClass('btn-dark');
+        $('#pin-2-button').removeClass('btn-dark');
+        $('#pin-3-button').removeClass('btn-dark');
+
+        $('#pin-1-button').removeAttr('disabled');
+        $('#pin-2-button').removeAttr('disabled');
+        $('#pin-3-button').removeAttr('disabled');
+    }
 }
 
 $( document ).ready(function() {
