link to GPIO control

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -7398,7 +7398,7 @@ var camera_id = {{ camera_id }};
             <div id="MANUAL_GPIO__A_CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
-            <div></div>
+            <div><a href="{{ url_for('indi_allsky.manual_gpio_view') }}" class="text-decoration-none link-info">Manual GPIO Control</a></div>
         </div>
     </div>
 
