--- a/indi_allsky/flask/templates/manual_gpio.html
+++ b/indi_allsky/flask/templates/manual_gpio.html
@@ -22,6 +22,14 @@ var pin_states = {{ pin_states | tojson }};
 <hr>
 
 <div class="form-group row">
+    <div class="col-sm-12">
+        Click the buttons to toggle the pin state
+    </div>
+</div>
+
+<hr>
+
+<div class="form-group row">
     <div class="col-sm-2">
       1 - Pin {{ pin_names[0] }}
     </div>
