--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -177,6 +177,10 @@
                                     <img src="{{ url_for('indi_allsky.static', filename='svg/hdd-fill.svg') }}" width="16" height="16" alt="Log"><span class="ms-1 d-none d-sm-inline">Drives</span> </a>
                             </li>
                             <li>
+                                <a href="{{ url_for('indi_allsky.manual_gpio_view') }}" class="dropdown-item">
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/lightning-charge-fill.svg') }}" width="16" height="16" alt="Log"><span class="ms-1 d-none d-sm-inline">GPIO Control</span> </a>
+                            </li>
+                            <li>
                                 <a href="{{ url_for('indi_allsky.support_info_view') }}" class="dropdown-item">
                                     <img src="{{ url_for('indi_allsky.static', filename='svg/info-circle.svg') }}" width="16" height="16" alt="Log"><span class="ms-1 d-none d-sm-inline">Support Info</span> </a>
                             </li>
